Semi-Working Java 11 and Gradle 5.0