@@ -18,9 +18,6 @@
  */
 package quests;
 
-import java.util.logging.Level;
-import java.util.logging.Logger;
-
 import quests.Q00001_LettersOfLove.Q00001_LettersOfLove;
 import quests.Q00002_WhatWomenWant.Q00002_WhatWomenWant;
 import quests.Q00003_WillTheSealBeBroken.Q00003_WillTheSealBeBroken;
@@ -497,6 +494,9 @@ import quests.Q10502_FreyaEmbroideredSoulCloak.Q10502_FreyaEmbroideredSoulCloak;
 import quests.Q10503_FrintezzaEmbroideredSoulCloak.Q10503_FrintezzaEmbroideredSoulCloak;
 import quests.Q10504_JewelOfAntharas.Q10504_JewelOfAntharas;
 import quests.Q10505_JewelOfValakas.Q10505_JewelOfValakas;
+
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 /**
  * @author NosBit
@@ -991,7 +991,7 @@ public class QuestMasterHandler
 		{
 			try
 			{
-				quest.newInstance();
+                quest.getConstructor().newInstance();
 			}
 			catch (Exception e)
 			{
